messing with canvas

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,8 @@
 <h1>Basic HTML5 Canvas</h1>
-<canvas id="mindmapCanvas" width="1000" height="800"></canvas>
+<canvas id="mindmapCanvas" width="1000" height="800">Sorry! Your browser doesn't support canvas - please upgrade your browser to use simplemindmaps!</canvas>
+
+
+<script type="text/javascript"></script>
 
 <!--Set up CSS to auto-size canvas in simplemindmaps-->
 
