--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- 
+ 	<script type="text/javascript" src="/helpers/canvas.js"></script>
     <meta charset="utf-8">
     <title>Simple Mindmaps</title>
 </head>
@@ -10,4 +10,6 @@
     {{{body}}}
 
 </body>
+
+
 </html>
