--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- 	<script type="text/javascript" src="/helpers/canvas.js"></script>
+ 	<script type="text/javascript" src="canvas/canvas.js"></script>
     <meta charset="utf-8">
     <title>Simple Mindmaps</title>
 </head>
