--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script type="text/javascript" src="http://livejs.com/live.js"></script>
     <meta charset="utf-8">
     <title>Simple Mindmaps</title>
 </head>
