first cut of idea generation

--- a/server/views/home.handlebars
+++ b/server/views/home.handlebars
@@ -1,4 +1,4 @@
-<h1>Basic HTML5 Canvas</h1>
+<h1>Simple Mind Maps</h1>
 <canvas id="mindmapCanvas" width="1000" height="800">Sorry! Your browser doesn't support canvas - please upgrade your browser to use simplemindmaps!</canvas>
 
 <!--Set up CSS to auto-size canvas in simplemindmaps-->
